--- a/screens/addQuestion.html
+++ b/screens/addQuestion.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h3>Add New Question</h3>
-        <form action="http://localhost:3000/addQuestion" method="post">
+        <form action="https://quizbackend-rit5.onrender.com/addQuestion" method="post">
             <label for="questionText">Question Text</label>
             <input type="text" id="questionText" name="questionText" placeholder="Write the question" required>
 
