--- a/screens/contact.html
+++ b/screens/contact.html
@@ -15,7 +15,7 @@
                 <h2>Contact Us</h2>
                 <p>Got a question? Interested in our services? Have some suggestions or just want to say hi? Contact us using the form below.</p>
                 <div class="column">
-                    <form id="contactForm" action="http://localhost:3000/submitContact" method="post">
+                    <form id="contactForm" action="https://quizbackend-rit5.onrender.com/submitContact" method="post">
                         <label for="fname">First Name</label>
                         <input type="text" name="fname" id="fname" placeholder="Enter your first name">
 
