--- a/screens/index.html
+++ b/screens/index.html
@@ -89,7 +89,7 @@
         };
 
         try {
-          const response = await fetch("http://localhost:3000/signup", {
+          const response = await fetch("https://quizbackend-rit5.onrender.com/signup", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
@@ -125,7 +125,7 @@
 
       // console.log('login',loginData)
       try {
-        const response = await fetch("http://localhost:3000/login", {
+        const response = await fetch("https://quizbackend-rit5.onrender.com/login", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
